--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,3 +20,7 @@ spring:
     console:
       enabled: true
       path: /h2
+
+springdoc:
+  api-docs.path: '/api-doc/json'
+  swagger-ui.path: '/api-doc/ui'
