--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,21 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+    <packaging>pom</packaging>
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.2</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
+	<modules>
+		<module>database</module>
+		<module>entity</module>
+		<module>integration</module>
+	</modules>
+
 	<groupId>com.g4bor.payment</groupId>
 	<artifactId>acquirer</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
@@ -15,7 +24,10 @@
 	<description>Payment acquirer service for the demo project of creating microservice architecture</description>
 	<properties>
 		<java.version>11</java.version>
+		<start-class>AcquirerApplication</start-class>
+		<project.version>0.0.1-SNAPSHOT</project.version>
 	</properties>
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -67,6 +79,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+					<executable>true</executable>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
